[package]
name = "github-exporter"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]
description = "Github exporter for Prometheus."
version = "0.2.0"
edition = "2018"
resolver = "2"

[dependencies]
anyhow = "~1.0"
clap = { version = "~2.33", default-features = false, features = ["color"] }
hyper = { version = "~0.14", default-features = false, features = ["server"] }
lazy_static = "~1.4"
octocrab = { version = "~0.10", default-features = false, features = ["rustls"] }
prometheus = { version = "~0.12", default-features = false, features = ["process"]}
serde = "~1.0"
serde_with = "~1.9"
tokio = { version = "~1.8", default-features = false, features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "~0.1"
tracing-subscriber = { version = "~0.2", features = ["json"] }

[profile.release]
lto = true
